// protoc --go_out=. --go-grpc_out=. ./*.proto

syntax = "proto3";

option go_package = ".;transport";

package transport;

message Header {
    string gate_id = 1; // 网关id
    int64 conn_id = 2; // 连接id
    int64 user_id = 3; // 用户id
    uint32 msg_id = 4; // 消息id
}

message RouteRpcReq {
    Header head = 1;
    bytes datas = 2; // 内容
}

message RouteRpcRsp {
    bytes datas = 1; // 内容
}

message HttpRpcReq {
    map<string, string> header = 1;
    string param = 2;
    bytes body = 3;
}

message HttpRpcRsp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

service Inner {
    rpc RouteRpc(RouteRpcReq) returns (RouteRpcRsp) {}
    rpc HttpRpc(HttpRpcReq) returns (HttpRpcRsp) {}
}